# ProjectTelemachy

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pixi.toml  pyproject.toml
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: _required.yml  ci.yml
schemas/: workflow-v1.json
src/telemachy/: __init__.py  agamemnon_client.py  cli.py  config.py  executor.py  maestro_client.py  models.py  schema.py
tests/: test_agamemnon_client.py  test_cli.py  test_executor.py  test_models.py
workflows/: example.yaml  fleet-deploy.yaml  hello-world.yaml
