[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telemachy"
version = "0.1.0"
requires-python = ">=3.10"

[tool.hatch.build.targets.wheel]
packages = ["src/telemachy"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["telemachy"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
